# F360-Equasketchan

./: .gitattributes  .gitignore  .mcp.json.example  README.md  pyproject.toml
bridge/addin/FusionEqBridge/: FusionEqBridge.manifest  FusionEqBridge.py
bridge/mcp_server/: server.py
docs/: CHANGES.md  README.md  SPEC_features.md  SPEC_implementation.md  cycloidal_reducer_example.md
eqcurve/: __init__.py  adapter.py
eqcurve/addin/EquationCurve/: EquationCurve.manifest  EquationCurve.py  custom_feature.py  dialog.py
eqcurve/core/: __init__.py  curvedef.py  diagnostics.py  eqlog.py  errors.py  evaluator.py  presets.py  refs.py  sampler.py
tests/: integration_harness.py  test_core.py  test_dialog.py  test_eqlog.py  test_phase_b.py  test_phase_d.py
